--- a/data/mwj/loot_tables/item/special/snowball.json
+++ b/data/mwj/loot_tables/item/special/snowball.json
@@ -27,6 +27,9 @@
             },{
               "function":"minecraft:set_nbt",
               "tag":"{HideFlags:63,Tags:[\"MWLitem\"]}"
+            },{
+              "function": "minecraft:set_count",
+              "count": 4
             }
           ]
         }
